--- a/.config
+++ b/.config
@@ -68,7 +68,7 @@ CONFIG_OPENSSL_WITH_EC2M=y
 CONFIG_OPENSSL_WITH_NPN=y
 CONFIG_PACKAGE_UnblockNeteaseMusic=y
 CONFIG_PACKAGE_amule=m
-CONFIG_PACKAGE_aria2=m
+CONFIG_PACKAGE_aria2=y
 CONFIG_PACKAGE_ariang=m
 # CONFIG_PACKAGE_autosamba is not set
 CONFIG_PACKAGE_baidupcs-web=m
@@ -189,7 +189,7 @@ CONFIG_PACKAGE_libxml2=y
 CONFIG_PACKAGE_libyaml-cpp=m
 CONFIG_PACKAGE_luci-app-advanced-reboot=y
 CONFIG_PACKAGE_luci-app-amule=m
-CONFIG_PACKAGE_luci-app-aria2=m
+CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=m
 CONFIG_PACKAGE_luci-app-cifsd=y
 CONFIG_PACKAGE_luci-app-commands=m
@@ -248,7 +248,7 @@ CONFIG_PACKAGE_luci-app-wireguard=m
 CONFIG_PACKAGE_luci-app-zerotier=m
 CONFIG_PACKAGE_luci-i18n-advanced-reboot-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-amule-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-cifsd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-commands-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-dnsforwarder-zh-cn=m
