--- a/.config
+++ b/.config
@@ -1,375 +1,84 @@
 CONFIG_TARGET_ipq806x=y
 CONFIG_TARGET_ipq806x_DEVICE_netgear_r7800=y
 CONFIG_TARGET_BOARD="ipq806x"
-CONFIG_ARIA2_BITTORRENT=y
-CONFIG_ARIA2_NOXML=y
-CONFIG_ARIA2_OPENSSL=y
-CONFIG_ARIA2_WEBSOCKET=y
-CONFIG_DOCKER_KERNEL_OPTIONS=y
-CONFIG_DOCKER_NET_MACVLAN=y
-CONFIG_DOCKER_RES_SHAPE=y
-CONFIG_DOCKER_STO_EXT4=y
-CONFIG_KERNEL_ARM_PMU=y
-CONFIG_KERNEL_BLK_DEV_THROTTLING=y
-CONFIG_KERNEL_CFQ_GROUP_IOSCHED=y
-CONFIG_KERNEL_CFS_BANDWIDTH=y
-CONFIG_KERNEL_CGROUP_PERF=y
-CONFIG_KERNEL_EXT4_FS_POSIX_ACL=y
-CONFIG_KERNEL_FS_POSIX_ACL=y
-CONFIG_KERNEL_IPC_NS=y
-CONFIG_KERNEL_KEYS=y
-CONFIG_KERNEL_MEMCG_SWAP=y
-CONFIG_KERNEL_MEMCG_SWAP_ENABLED=y
-CONFIG_KERNEL_NAMESPACES=y
-CONFIG_KERNEL_NET_NS=y
-CONFIG_KERNEL_PERF_EVENTS=y
-CONFIG_KERNEL_PID_NS=y
-CONFIG_KERNEL_USER_NS=y
-CONFIG_KERNEL_UTS_NS=y
-CONFIG_LIBCURL_COOKIES=y
-CONFIG_LIBCURL_FILE=y
-CONFIG_LIBCURL_FTP=y
-CONFIG_LIBCURL_HTTP=y
-CONFIG_LIBCURL_NO_SMB="!"
-CONFIG_LIBCURL_OPENSSL=y
-CONFIG_LIBCURL_PROXY=y
-CONFIG_NGINX_HEADERS_MORE=y
-CONFIG_NGINX_HTTP_ACCESS=y
-CONFIG_NGINX_HTTP_AUTH_BASIC=y
-CONFIG_NGINX_HTTP_AUTOINDEX=y
-CONFIG_NGINX_HTTP_BROWSER=y
-CONFIG_NGINX_HTTP_CACHE=y
-CONFIG_NGINX_HTTP_CHARSET=y
-CONFIG_NGINX_HTTP_EMPTY_GIF=y
-CONFIG_NGINX_HTTP_FASTCGI=y
-CONFIG_NGINX_HTTP_GEO=y
-CONFIG_NGINX_HTTP_GZIP=y
-CONFIG_NGINX_HTTP_LIMIT_CONN=y
-CONFIG_NGINX_HTTP_LIMIT_REQ=y
-CONFIG_NGINX_HTTP_MAP=y
-CONFIG_NGINX_HTTP_MEMCACHED=y
-CONFIG_NGINX_HTTP_PROXY=y
-CONFIG_NGINX_HTTP_REFERER=y
-CONFIG_NGINX_HTTP_REWRITE=y
-CONFIG_NGINX_HTTP_SCGI=y
-CONFIG_NGINX_HTTP_SPLIT_CLIENTS=y
-CONFIG_NGINX_HTTP_SSI=y
-CONFIG_NGINX_HTTP_UPSTREAM_HASH=y
-CONFIG_NGINX_HTTP_UPSTREAM_IP_HASH=y
-CONFIG_NGINX_HTTP_UPSTREAM_KEEPALIVE=y
-CONFIG_NGINX_HTTP_UPSTREAM_LEAST_CONN=y
-CONFIG_NGINX_HTTP_USERID=y
-CONFIG_NGINX_HTTP_UWSGI=y
-CONFIG_NGINX_NAXSI=y
-CONFIG_NGINX_PCRE=y
-CONFIG_OPENSSL_WITH_COMPRESSION=y
-CONFIG_OPENSSL_WITH_DTLS=y
-CONFIG_OPENSSL_WITH_EC2M=y
-CONFIG_OPENSSL_WITH_NPN=y
+CONFIG_ALL=y
+CONFIG_ALL_KMODS=y
+CONFIG_ALL_NONSHARED=y
 CONFIG_PACKAGE_UnblockNeteaseMusic=y
-CONFIG_PACKAGE_amule=m
-CONFIG_PACKAGE_aria2=y
-CONFIG_PACKAGE_ariang=m
 # CONFIG_PACKAGE_autosamba is not set
-CONFIG_PACKAGE_baidupcs-web=m
 CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_boost=y
+CONFIG_PACKAGE_boost-atomic=y
 CONFIG_PACKAGE_boost-chrono=y
+CONFIG_PACKAGE_boost-container=y
+CONFIG_PACKAGE_boost-context=y
+CONFIG_PACKAGE_boost-contract=y
+CONFIG_PACKAGE_boost-coroutine=y
 CONFIG_PACKAGE_boost-date_time=y
+CONFIG_PACKAGE_boost-fiber=y
+CONFIG_PACKAGE_boost-filesystem=y
+CONFIG_PACKAGE_boost-graph=y
+CONFIG_PACKAGE_boost-iostreams=y
+CONFIG_PACKAGE_boost-libs=y
+CONFIG_PACKAGE_boost-log=y
+CONFIG_PACKAGE_boost-math=y
 CONFIG_PACKAGE_boost-program_options=y
 CONFIG_PACKAGE_boost-random=y
+CONFIG_PACKAGE_boost-regex=y
+CONFIG_PACKAGE_boost-serialization=y
+CONFIG_PACKAGE_boost-stacktrace=y
 CONFIG_PACKAGE_boost-system=y
-CONFIG_PACKAGE_btrfs-progs=m
-CONFIG_PACKAGE_bzip2=m
-CONFIG_PACKAGE_ca-bundle=y
-CONFIG_PACKAGE_cgroupfs-mount=m
-CONFIG_PACKAGE_cifsd-tools=y
-CONFIG_PACKAGE_collectd=y
-CONFIG_PACKAGE_collectd-mod-cpu=y
-CONFIG_PACKAGE_collectd-mod-interface=y
-CONFIG_PACKAGE_collectd-mod-iwinfo=y
-CONFIG_PACKAGE_collectd-mod-load=y
-CONFIG_PACKAGE_collectd-mod-memory=y
-CONFIG_PACKAGE_collectd-mod-network=y
-CONFIG_PACKAGE_collectd-mod-rrdtool=y
-CONFIG_PACKAGE_containerd=m
-CONFIG_PACKAGE_curl=m
-CONFIG_PACKAGE_dnscrypt-proxy=m
-CONFIG_PACKAGE_dnscrypt-proxy-resolvers=m
-CONFIG_PACKAGE_dnsforwarder=m
+CONFIG_PACKAGE_boost-test=y
+CONFIG_PACKAGE_boost-thread=y
+CONFIG_PACKAGE_boost-timer=y
+CONFIG_PACKAGE_boost-type_erasure=y
+CONFIG_PACKAGE_boost-wave=y
+CONFIG_PACKAGE_boost-wserialization=y
+CONFIG_PACKAGE_dnsmasq_full_auth=y
+CONFIG_PACKAGE_dnsmasq_full_conntrack=y
 CONFIG_PACKAGE_dnsmasq_full_dnssec=y
-CONFIG_PACKAGE_docker-ce=m
-CONFIG_PACKAGE_e2fsprogs=m
-CONFIG_PACKAGE_fdisk=m
 CONFIG_PACKAGE_frpc=y
-CONFIG_PACKAGE_glib2=y
-CONFIG_PACKAGE_haproxy=m
-CONFIG_PACKAGE_hd-idle=y
 CONFIG_PACKAGE_ipt2socks=y
-CONFIG_PACKAGE_iptables-mod-extra=m
 CONFIG_PACKAGE_kcptun-client=y
-CONFIG_PACKAGE_kmod-br-netfilter=m
-CONFIG_PACKAGE_kmod-crypto-ccm=y
-CONFIG_PACKAGE_kmod-crypto-cmac=y
-CONFIG_PACKAGE_kmod-crypto-ctr=y
-CONFIG_PACKAGE_kmod-crypto-md4=y
-CONFIG_PACKAGE_kmod-crypto-seqiv=y
-CONFIG_PACKAGE_kmod-crypto-sha512=y
-CONFIG_PACKAGE_kmod-dax=m
-CONFIG_PACKAGE_kmod-dm=m
-CONFIG_PACKAGE_kmod-dummy=m
-CONFIG_PACKAGE_kmod-fs-cifsd=y
-CONFIG_PACKAGE_kmod-ikconfig=m
-CONFIG_PACKAGE_kmod-ipt-extra=m
-CONFIG_PACKAGE_kmod-lib-crc32c=m
-CONFIG_PACKAGE_kmod-macvlan=y
-CONFIG_PACKAGE_kmod-nf-conntrack-netlink=m
-CONFIG_PACKAGE_kmod-nf-ipvs=m
-CONFIG_PACKAGE_kmod-nft-bridge=m
-CONFIG_PACKAGE_kmod-nft-core=m
-CONFIG_PACKAGE_kmod-nft-netdev=m
-CONFIG_PACKAGE_kmod-sched-connmark=m
-CONFIG_PACKAGE_kmod-tun=m
-CONFIG_PACKAGE_kmod-udptunnel4=m
-CONFIG_PACKAGE_kmod-udptunnel6=m
-CONFIG_PACKAGE_kmod-usb-printer=m
-CONFIG_PACKAGE_kmod-veth=m
-CONFIG_PACKAGE_kmod-wireguard=m
-CONFIG_PACKAGE_libatomic=y
-CONFIG_PACKAGE_libattr=y
-CONFIG_PACKAGE_libbfd=m
-CONFIG_PACKAGE_libblkid=m
 CONFIG_PACKAGE_libbz2=y
-CONFIG_PACKAGE_libcap=m
-CONFIG_PACKAGE_libcomerr=m
-CONFIG_PACKAGE_libcurl=y
-CONFIG_PACKAGE_libdb47=y
-CONFIG_PACKAGE_libdevmapper=m
-CONFIG_PACKAGE_libdouble-conversion=y
-CONFIG_PACKAGE_libevent2=y
-CONFIG_PACKAGE_libexpat=y
-CONFIG_PACKAGE_libext2fs=m
-CONFIG_PACKAGE_libfdisk=m
-CONFIG_PACKAGE_libffi=y
-CONFIG_PACKAGE_libfreetype=m
-CONFIG_PACKAGE_libgd=m
-CONFIG_PACKAGE_libgdbm=y
+CONFIG_PACKAGE_libexif=y
+CONFIG_PACKAGE_libflac=y
 CONFIG_PACKAGE_libhttp-parser=y
-CONFIG_PACKAGE_libjpeg=m
-CONFIG_PACKAGE_libltdl=y
-CONFIG_PACKAGE_liblzo=m
-CONFIG_PACKAGE_libminiupnpc=y
-CONFIG_PACKAGE_libmount=m
-CONFIG_PACKAGE_libnatpmp=y
+CONFIG_PACKAGE_libid3tag=y
+CONFIG_PACKAGE_libjpeg=y
+CONFIG_PACKAGE_liblzma=y
 CONFIG_PACKAGE_libncurses=y
-CONFIG_PACKAGE_libnetfilter-conntrack=m
+CONFIG_PACKAGE_libnetfilter-conntrack=y
 CONFIG_PACKAGE_libnettle=y
-CONFIG_PACKAGE_libnetwork=m
-CONFIG_PACKAGE_libnfnetlink=m
-CONFIG_PACKAGE_libnftnl=m
+CONFIG_PACKAGE_libnfnetlink=y
 CONFIG_PACKAGE_libnghttp2=y
-CONFIG_PACKAGE_libnl-core=y
-CONFIG_PACKAGE_libnl-genl=y
-CONFIG_PACKAGE_libpcap=m
-CONFIG_PACKAGE_libpcre2-16=y
-CONFIG_PACKAGE_libpng=m
+CONFIG_PACKAGE_libogg=y
 CONFIG_PACKAGE_libreadline=y
-CONFIG_PACKAGE_librrd1=y
-CONFIG_PACKAGE_libsmartcols=m
 CONFIG_PACKAGE_libsqlite3=y
-CONFIG_PACKAGE_libss=m
 CONFIG_PACKAGE_libstdcpp=y
-CONFIG_PACKAGE_libtins=m
-CONFIG_PACKAGE_libunbound=m
-CONFIG_PACKAGE_libupnp=m
 CONFIG_PACKAGE_libuv=y
-CONFIG_PACKAGE_libwebsockets-full=m
-CONFIG_PACKAGE_libwxbase=m
-CONFIG_PACKAGE_libxml2=y
-CONFIG_PACKAGE_libyaml-cpp=m
-CONFIG_PACKAGE_luci-app-advanced-reboot=y
-CONFIG_PACKAGE_luci-app-amule=m
-CONFIG_PACKAGE_luci-app-aria2=y
-CONFIG_PACKAGE_luci-app-baidupcs-web=m
-CONFIG_PACKAGE_luci-app-cifsd=y
-CONFIG_PACKAGE_luci-app-commands=m
-CONFIG_PACKAGE_luci-app-dnscrypt-proxy=m
-CONFIG_PACKAGE_luci-app-dnsforwarder=m
-CONFIG_PACKAGE_luci-app-dnspod=m
-CONFIG_PACKAGE_luci-app-docker=m
-CONFIG_PACKAGE_luci-app-familycloud=m
-CONFIG_PACKAGE_luci-app-filetransfer=m
+CONFIG_PACKAGE_libvorbis=y
+CONFIG_PACKAGE_libzstd=y
 CONFIG_PACKAGE_luci-app-frpc=y
-CONFIG_PACKAGE_luci-app-guest-wifi=m
-CONFIG_PACKAGE_luci-app-haproxy-tcp=m
-CONFIG_PACKAGE_luci-app-hd-idle=y
-CONFIG_PACKAGE_luci-app-kodexplorer=m
-CONFIG_PACKAGE_luci-app-mwan3=y
-CONFIG_PACKAGE_luci-app-mwan3helper=y
-CONFIG_PACKAGE_luci-app-n2n_v2=m
-CONFIG_PACKAGE_luci-app-netdata=m
-CONFIG_PACKAGE_luci-app-nft-qos=m
-CONFIG_PACKAGE_luci-app-nlbwmon=m
-CONFIG_PACKAGE_luci-app-noddos=m
-CONFIG_PACKAGE_luci-app-nps=m
-CONFIG_PACKAGE_luci-app-ntpc=m
-CONFIG_PACKAGE_luci-app-pppoe-relay=m
-CONFIG_PACKAGE_luci-app-privoxy=m
-CONFIG_PACKAGE_luci-app-qbittorrent=y
-CONFIG_PACKAGE_luci-app-qos=m
-CONFIG_PACKAGE_luci-app-ramfree=m
-# CONFIG_PACKAGE_luci-app-samba is not set
-CONFIG_PACKAGE_luci-app-shadowsocks-libev=y
-CONFIG_PACKAGE_luci-app-smartdns=y
-CONFIG_PACKAGE_luci-app-squid=m
+CONFIG_PACKAGE_luci-app-minidlna=y
+CONFIG_PACKAGE_luci-app-samba=m
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
-CONFIG_PACKAGE_luci-app-statistics=y
-CONFIG_PACKAGE_luci-app-syncdial=y
-CONFIG_PACKAGE_luci-app-transmission=y
-CONFIG_PACKAGE_luci-app-travelmate=m
-CONFIG_PACKAGE_luci-app-ttyd=m
-CONFIG_PACKAGE_luci-app-udpxy=m
-CONFIG_PACKAGE_luci-app-uhttpd=m
 CONFIG_PACKAGE_luci-app-unblockmusic=y
-CONFIG_PACKAGE_luci-app-unbound=m
-CONFIG_PACKAGE_luci-app-usb-printer=m
-CONFIG_PACKAGE_luci-app-verysync=m
-CONFIG_PACKAGE_luci-app-vnstat=m
-CONFIG_PACKAGE_luci-app-vpnbypass=m
-CONFIG_PACKAGE_luci-app-watchcat=m
-CONFIG_PACKAGE_luci-app-webadmin=m
-CONFIG_PACKAGE_luci-app-wifischedule=m
-CONFIG_PACKAGE_luci-app-wireguard=m
-CONFIG_PACKAGE_luci-app-zerotier=m
-CONFIG_PACKAGE_luci-i18n-advanced-reboot-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-amule-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-cifsd-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-commands-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-dnsforwarder-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-docker-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-guest-wifi-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-haproxy-tcp-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-kodexplorer-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-mwan3helper-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-n2n_v2-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-nft-qos-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-ntpc-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-pppoe-relay-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-privoxy-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-qbittorrent-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-qos-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-statistics-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-transmission-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-verysync-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-vnstat-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-vpnbypass-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-wifischedule-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=m
-CONFIG_PACKAGE_luci-lib-fs=m
-CONFIG_PACKAGE_luci-lib-httpprotoutils=m
-CONFIG_PACKAGE_luci-proto-wireguard=m
-CONFIG_PACKAGE_luci-theme-argon=m
-CONFIG_PACKAGE_luci-theme-material=m
-CONFIG_PACKAGE_mount-utils=m
-CONFIG_PACKAGE_mwan3=y
-CONFIG_PACKAGE_n2n_v2=m
-CONFIG_PACKAGE_netdata=m
-CONFIG_PACKAGE_nft-qos=m
-CONFIG_PACKAGE_nftables=m
-CONFIG_PACKAGE_nginx=m
-CONFIG_PACKAGE_nlbwmon=m
-CONFIG_PACKAGE_noddos=m
+CONFIG_PACKAGE_luci-i18n-minidlna-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-samba-zh-cn=m
+CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-theme-material=y
+CONFIG_PACKAGE_luci-theme-netgear=y
+CONFIG_PACKAGE_minidlna=y
 CONFIG_PACKAGE_node=y
-CONFIG_PACKAGE_npc=m
-CONFIG_PACKAGE_ntpclient=m
-CONFIG_PACKAGE_p910nd=m
-CONFIG_PACKAGE_php7=m
-CONFIG_PACKAGE_php7-fpm=m
-CONFIG_PACKAGE_php7-mod-curl=m
-CONFIG_PACKAGE_php7-mod-gd=m
-CONFIG_PACKAGE_php7-mod-iconv=m
-CONFIG_PACKAGE_php7-mod-json=m
-CONFIG_PACKAGE_php7-mod-mbstring=m
-CONFIG_PACKAGE_php7-mod-opcache=m
-CONFIG_PACKAGE_php7-mod-session=m
-CONFIG_PACKAGE_php7-mod-zip=m
-CONFIG_PACKAGE_privoxy=m
-CONFIG_PACKAGE_python=y
-CONFIG_PACKAGE_python-base=y
-CONFIG_PACKAGE_python-codecs=y
-CONFIG_PACKAGE_python-compiler=y
-CONFIG_PACKAGE_python-ctypes=y
-CONFIG_PACKAGE_python-db=y
-CONFIG_PACKAGE_python-decimal=y
-CONFIG_PACKAGE_python-distutils=y
-CONFIG_PACKAGE_python-email=y
-CONFIG_PACKAGE_python-gdbm=y
-CONFIG_PACKAGE_python-light=y
-CONFIG_PACKAGE_python-logging=y
-CONFIG_PACKAGE_python-multiprocessing=y
-CONFIG_PACKAGE_python-ncurses=y
-CONFIG_PACKAGE_python-openssl=y
-CONFIG_PACKAGE_python-pydoc=y
-CONFIG_PACKAGE_python-sqlite3=y
-CONFIG_PACKAGE_python-unittest=y
-CONFIG_PACKAGE_python-xml=y
-CONFIG_PACKAGE_qBittorrent=y
-CONFIG_PACKAGE_qos-scripts=m
-CONFIG_PACKAGE_qt5-core=y
-CONFIG_PACKAGE_qt5-network=y
-CONFIG_PACKAGE_qt5-xml=y
-CONFIG_PACKAGE_rblibtorrent=y
-CONFIG_PACKAGE_rp-pppoe-common=m
-CONFIG_PACKAGE_rp-pppoe-relay=m
-CONFIG_PACKAGE_rrdtool1=y
-CONFIG_PACKAGE_runc=m
-# CONFIG_PACKAGE_samba36-server is not set
+CONFIG_PACKAGE_samba36-server=m
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
-CONFIG_PACKAGE_smartdns=y
-CONFIG_PACKAGE_squid=m
 CONFIG_PACKAGE_terminfo=y
-CONFIG_PACKAGE_tini=m
-CONFIG_PACKAGE_transmission-daemon-openssl=y
-CONFIG_PACKAGE_transmission-web-control=y
-CONFIG_PACKAGE_travelmate=m
 CONFIG_PACKAGE_trojan=y
-CONFIG_PACKAGE_ttyd=m
-CONFIG_PACKAGE_udpxy=m
-CONFIG_PACKAGE_unbound-daemon=m
-CONFIG_PACKAGE_verysync=m
-CONFIG_PACKAGE_vnstat=m
-CONFIG_PACKAGE_vnstati=m
-CONFIG_PACKAGE_vpnbypass=m
-CONFIG_PACKAGE_watchcat=m
-CONFIG_PACKAGE_wifischedule=m
-CONFIG_PACKAGE_wireguard-tools=m
-CONFIG_PACKAGE_zerotier=m
-CONFIG_PACKAGE_zoneinfo-asia=m
-CONFIG_PHP7_LIBFREETYPE=y
-CONFIG_SQLITE_FTS3=y
-CONFIG_SQLITE_RTREE=y
-CONFIG_SQUID_enable-dlmalloc=y
-CONFIG_SQUID_enable-ipv6=y
-CONFIG_SQUID_use-openssl=y
-CONFIG_boost-compile-visibility-hidden=y
-CONFIG_boost-runtime-shared=y
-CONFIG_boost-static-and-shared-libs=y
-CONFIG_boost-variant-release=y
+CONFIG_PACKAGE_zstd=y
+CONFIG_SDK=y
