--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -90,10 +90,10 @@ jobs:
       uses: P3TERX/debugger-action@master
       
     - name: Multi-thread compile 2
+      if: failure()
       run: |
         cd openwrt
         echo -e "$(nproc) thread compile"
-        make oldconfig
         make -j$(nproc)
 
     - name: Single-thread compile
